# uproot-docs

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  announcements.json  mkdocs.yml  pyproject.toml
docs/: announcements.json  examples.md  help.md  index.md  legal.md  why-uproot.md
docs/advanced/: alpinejs.md  dropouts.md  models.md  randomization.md  rounds.md  settings-forms.md  timeouts.md  uploads.md
docs/building/: data.md  forms.md  live-methods.md  operators.md  pages.md  results.md
docs/getting-started/: installation.md  project-structure.md  tutorial.md
docs/multiplayer/: chat.md  groups.md  real-time.md  synchronization.md
docs/praise/: index.html
docs/reference/: admin-api.md  api.md  cli.md  fields.md  page-methods.md
docs/running/: admin.md  deployment.md  export-advanced.md  export.md  rooms.md  sessions-rooms.md  sessions.md  vps-setup.md
scripts/: generate_admin_api_docs.py
